--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -10,9 +10,16 @@
     <h2>@Model.User.Name</h2>
     <img src="@Model.User.Avatar" />
 
-    <div id="postsCount" class="profileCounter"> <p> <b> @Model.userPosts.Count()</b></p> <p>Posts</p></div>
-    <div id="followerCount"class="profileCounter"> <p> <b> @Model.amountOfFollowers</b></p> <p>Followers</p></div>
-    <div id="followingCount"class="profileCounter"> <p> <b> @Model.amountFollowing</b></p> <p>Following</p></div>
+    
+<div id="postsCount" class="profileCounter"> <p> <b> @Model.userPosts.Count()</b></p> <p>Posts</p></div>
+
+<div id="followerCount" class="profileCounter clickable"> <a asp-page="./followers" ><p> <b> @Model.amountOfFollowers</b></p> <p>Followers</p></a></div>
+
+<div id="followingCount" class="profileCounter clickable"> <a asp-page="./following" ><p> <b> @Model.amountFollowing</b></p> <p>Following</p></a></div>
+
+    
+
+
 
     <p id="bio">@Model.User.Biography</p>
 
