--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <header class="parentNavBarContainer">
     <div class="div1NavBar">
         <form method="get" asp-page="Index" id="searchbar">
-            <input type="text" name="search" placeholder="Search for profile" autocomplete="off">
+            <input type="text" name="search" placeholder="Search" autocomplete="off">
             <label>
                 <button type="submit"></button>
             </label>
