--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -178,7 +178,7 @@
 
             @if (Model.User.ID == Model.LoggedIn.LoggedInAccountID)
             {
-                <form method="post" asp-page-handler="delete" asp-route-id="@post.ID">
+                <form method="post" asp-page-handler="delete" asp-route-postID="@post.ID">
                     <input hidden name="userId" value="@Model.User.ID">
                     <button type="submit">Delete</button>
                 </form>
