better search bar get

--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
 <header class="parentNavBarContainer">
     <div class="div1NavBar">
-        <form method="get" asp-page="Index" id="searchbar">
+        <form method="get" asp-page="Search" id="searchbar">
             <input type="text" name="search" placeholder="Search" autocomplete="off">
             <label>
                 <button type="submit"></button>
