--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -199,7 +199,7 @@ Add new post styling
     font-size: 14px;
     color: #c2cdcd;
     margin: 6px 0.4em 0 1.5em
-    
+
 }
 
 #addPic {
@@ -544,7 +544,7 @@ Below is flow styling
 
 
 .interaction form p {
-    margin-left: 1.8em;
+    margin-left: 1.5em;
     margin-top: 0.2em;
     font-size: 14px;
 }
@@ -555,7 +555,7 @@ Below is flow styling
     font-size: 14px;
 }
 
-.interaction label:hover {
+.interaction #like:hover {
     cursor: pointer;
     color: #d91670;
     background-image: url(..//likehover.png);
@@ -564,7 +564,7 @@ Below is flow styling
 }
 
 .interaction form .liked {
-    background-image: url(..//likeliked.png);
+    background-image: url(..//likeliked.png) !important;
 }
 
 .comments {
@@ -585,12 +585,11 @@ Below is flow styling
     border-color: rgba(29, 156, 240, 0.2);
 }
 
-.interaction a .tags{
+.interaction form .tags{
     background-image: url(..//hashtag.png);
     background-size: 25px;
-    width: 25px;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 0% 50%;
     overflow:visible;
     display: flex;
     border: 4px solid transparent;
@@ -599,7 +598,8 @@ Below is flow styling
     transition: all 200ms ease;
 }
 
-.interaction .tagContainer:hover {
+.interaction .tags:hover {
+    cursor: pointer;
     color: #c2cdcd;
     background-color: rgb(213,175,52, 0.2);
     border-color: rgb(213,175,52, 0.2);
@@ -679,7 +679,7 @@ Below is flow styling
 #postComment .pic-top, .commentProfilePic img {
     width: 25px;
     height: 25px;
-    margin-top: 10px;   
+    margin-top: 10px;
 }
 
 #postComment button {
@@ -855,61 +855,61 @@ Profile styling
 
 
 #ProfileSettingsDiv {
-  background-color: #2E3136;
-  width: 55vw;
-  height: 70vh;
-  margin: auto;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
+    background-color: #2E3136;
+    width: 55vw;
+    height: 70vh;
+    margin: auto;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
 }
 
 #ProfileSettingsDiv h1 {
-  color: #F0F7EE;
-  margin-bottom: 10px;
-  font-size: 24px;
+    color: #F0F7EE;
+    margin-bottom: 10px;
+    font-size: 24px;
 }
 
 #ProfileSettingsDiv p {
-  color: #F0F7EE;
-  margin-bottom: 10px;
-  font-size: 14px;
+    color: #F0F7EE;
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
 #ProfileSettingsDiv .editBio {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 #ProfileSettingsDiv .leftBio {
-  margin-right: 10px;
-  flex: 0 0 150px;
+    margin-right: 10px;
+    flex: 0 0 150px;
 }
 
 #ProfileSettingsDiv .rightBio {
-  flex: 1;
+    flex: 1;
 }
 
 #ProfileSettingsDiv .editBio label {
-  color: #F0F7EE;
-  font-size: 20px;
+    color: #F0F7EE;
+    font-size: 20px;
 }
 
 #ProfileSettingsDiv .editBio textarea {
-  width: 100%;
-  resize: vertical;
-  font-size: 14px;
+    width: 100%;
+    resize: vertical;
+    font-size: 14px;
 }
 
 #ProfileSettingsDiv .editBio img {
-  margin-right: 10px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
+    margin-right: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 #backToProfileButton {
@@ -978,7 +978,7 @@ Followers and Following page css
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Dark background color with 0.5 opacity */
-    
+
 }
 
 .FollowersBox {
@@ -1031,7 +1031,7 @@ Followers and Following page css
     overflow: scroll;
 }
 
-/* Hide the scrollbar for webkit-based browsers */
+
 #FollowersScrollableBox::-webkit-scrollbar {
     display: none;
 }
@@ -1059,3 +1059,29 @@ Followers and Following page css
     object-fit: cover;
     margin-right: 10px;
 }
+
+/* merge conflict, added these afterhand, do not know what they are for */
+
+.listedUser img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.listedUser {
+    margin-top: 0.5em;
+}
+
+.queryUser h3{
+    margin-bottom: 1em;
+}
+
+.listedUser a {
+    text-decoration: none;
+    color: #f1dba7;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
+}
+
