--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,37 @@
         <img src="~/FaceGramLogo.svg" alt="FaceGram Logo Gold" class="svg-logo" type="image/svg+xml" id="FaceGramNavBarLogo">
     </a>
     <div class="div3NavBar">
+        @{
+            var users = database.Users.ToList();
+            var likes = database.Likes.ToList();
+            var follows = database.Follows.ToList();
+            var loggedIn = accessControl;
+            var yourFollowers = follows.Where(f => f.UserID == loggedIn.LoggedInAccountID).ToList();
+            var peopleWhoFollow = users
+                .Where(u => yourFollowers.Any(f => f.FollowingId == u.ID))
+                .OrderByDescending(u => yourFollowers
+                .Where(f => f.FollowingId == u.ID)
+                .Select(f => f.DateFollowed)
+                .FirstOrDefault()) 
+                .ToList();
+        }
+        <div class="notificationDiv">
+                <label>
+                    <button id="notificationButton" type="button"></button>
+                </label>
+                <ul id="notificationList" class="hidden">
+                @foreach(var person in peopleWhoFollow)
+                    {
+                        var follow = yourFollowers.Where(f => f.FollowingId == person.ID).FirstOrDefault();
+                        <a asp-page="Profile" asp-route-userId="@person.ID">
+                        <li>
+                        <p>@person.Name just followed you!</p>
+                        <p id="sinceFollow">@follow.TimeSinceFollow() ago</p>
+                    </li>
+                       </a>
+                    }
+                </ul>
+        </div>
         <a asp-page="Profile" asp-route-userId="@accessControl.LoggedInAccountID">
             <img class="pic-top" src="@database.Users.Find(accessControl.LoggedInAccountID).Avatar" alt="error">
         <p>@accessControl.LoggedInAccountName</p> </a>
