--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -117,14 +117,14 @@
                 <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
                     @if (post.IsLiked(Model.LoggedIn.LoggedInAccountID, Model.database))
                     {
-                        <label class="liked">
+                        <label id="like" class="liked">
                             <button type="submit"></button>
                             <p>@post.LikeCount</p>
                         </label>
                     }
                     else
                     {
-                        <label>
+                        <label id="like">
                             <button type="submit"></button>
                             <p>@post.LikeCount</p>
                         </label>
