--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -152,10 +152,14 @@ button[type="submit"]:hover {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-right: 20px;
+    transition: width 0.2s, height 0.2s;
+
 }
 
 .div3NavBar label:hover {
     cursor: pointer;
+    width: 40px;
+    height: 40px;
 }
 
 .div3NavBar label button {
@@ -178,6 +182,7 @@ button[type="submit"]:hover {
     top: 10vh;
 }
 
+
 #notificationList li{
     display: flex;
     flex-direction: column;
@@ -188,7 +193,7 @@ button[type="submit"]:hover {
     border-radius: 5px;
 }
 
-#notificationList li:hover{
+#notificationList li:not(#noFollows):hover {
     background-color: #2E3136;
 }
 
