Sample data fix and following/followers list bug fix

--- a/Project Hashtag/Pages/Followers.cshtml
+++ b/Project Hashtag/Pages/Followers.cshtml
@@ -12,7 +12,7 @@
 <body>
 <div class="FollowersBox">
     <h2>Followers</h2>
-    <a asp-page="Profile" asp-route-userId="@accessControl.LoggedInAccountID">
+    <a asp-page="Profile" asp-route-userId="@Model.User.ID">
         <button id="Xbutton">X</button>
     </a>
     <div id="FollowersBoxDivider"></div>
