--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -50,6 +50,7 @@ footer ul {
 
 footer a {
     color: #f1dba7;
+    text-decoration: none;
 }
 
 footer a:hover {
@@ -109,7 +110,10 @@ button[type="submit"]:hover {
     transform: scale(1.02); /* Added transform property */
 }
 
-
+#deleteButton {
+    width: 90%;
+    margin: auto;
+}
 
 .parentNavBarContainer {
     display: grid;
