css timeline btn

--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="~/css/test.css" asp-append-version="true">
 }
 
-<form method="get">
+<form method="get" id="timeLineInput">
+    <p>Check out the timeline for a different feed experience!</p>
     <input type="hidden" name="timeLine" value="true"/>
-    <button type="submit">Try timeline mode</button>
+    <button type="submit">Try</button>
 </form>
 <div class="spacerTop"></div>
 <ul class="flow">
