--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -1258,3 +1258,7 @@ Followers and Following page css
     gap: 2em;
 }
 
+#timeLineInput {
+    width: clamp(200px, 100%, 500px);
+    margin: 1em auto 0 auto;
+}
